--- a/views/page-template.pug
+++ b/views/page-template.pug
@@ -1,20 +1,28 @@
-mixin navLink(name, href)
-  a(href=href, class=(name === title ? "active" : ""))= name
+mixin navLink(name, endpoint, specialClass)
+  li(class=(name === title ? specialClass + " active" : specialClass))
+    a(href=endpoint)= name
 
-mixin page(title, endpoint)
-  li
-    +navLink(title, endpoint)
+mixin navFolder(name, links)
+    ul.folder
+      li.folderTitle
+        span(class="material-symbols-outlined ")= 'chevron_right'
+        span= name
+      each page in links
+        +navLink(page.title, page.endpoint, 'folded')
 
-mixin navbar(...pages)
-  div(id='navBar')
-    ul
-      li
-        div.title
-          h3 Resources
-          img(src="assets/turt.png")
-      each page in pages
-        +page(page.title, page.endpoint)
+mixin navbar(dirs, links)
+  div.navContainer
+    div(id='navBar')
+      div.title
+        h3 Index
+        img(src="assets/turt.png")
+      each files, folder in dirs
+        +navFolder(folder, files)
+      ul.lonelyLink
+        each page in links
+          +navLink(page.title, page.endpoint, '')
 
+doctype html
 html
   head
     title= title
@@ -26,12 +34,14 @@ html
       hljs.highlightAll();
 
     // style
+    link(rel='stylesheet', type='text/css', href='navBar.css')
     link(rel='stylesheet', type='text/css', href='style.css')
     link(rel="preconnect", href="https://fonts.googleapis.com")
     link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap", rel="stylesheet")
     link(href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap", rel="stylesheet")
     link(href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap", rel="stylesheet")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0")
 
     // favicon
     link(rel='icon', type='image/x-icon' href='favicon/favicon.ico')
@@ -44,7 +54,10 @@ html
     meta(name="robots", content="noindex")
 
   body
-    +navbar(...navData)
+    +navbar(navDirs, navLinks)
 
     div.content
       | !{content}
+
+  script
+    include navFolding.js
