--- a/public/navBar.css
+++ b/public/navBar.css
@@ -2,13 +2,15 @@
 
 #navBar {
     width: 13vw;
+    min-width: max-content;
     height: 100vh;
     position: fixed;
     background-color: var(--beige);
 }
 
 #navBar > * {
-    width: 13vw;
+    width: inherit;
+    min-width: 100px;
     list-style-type: none;
     list-style-position: inside;
 }
@@ -25,8 +27,8 @@
 }
 
 #navBar img {
-    height: 7vh;
-    width: auto;
+    height: auto;
+    width: 5vh;
     position: absolute;
     right: 1vw;
     bottom: 1vw;
