--- a/views/index.html
+++ b/views/index.html
@@ -4,3 +4,337 @@
 
 <p>These notes contain my work, and some text copied from software documentation.</p>
 
+
+<!-- <div class="w"> -->
+<!--   <div> -->
+<!--     <div style="color:#d9cec1;">Container</div> -->
+<!--     <div class="wrapper pink"  style="display:block;"> -->
+<!--       <div >1</div> -->
+<!--       <div >2</div> -->
+<!--       <div >3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+<!-- <div class="w"> -->
+<!--   <div> -->
+<!--     <div>Default</div> -->
+<!--     <div class="wrapper purple" style="display:block;"> -->
+<!--       <div >1</div> -->
+<!--       <div >2</div> -->
+<!--       <div >3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div>Flexbox</div> -->
+<!--     <div class="wrapper purple"> -->
+<!--       <div >1</div> -->
+<!--       <div >2</div> -->
+<!--       <div >3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+<!-- <div class="w" style=""> -->
+<!--   <div style="display: flex; flex-direction: column; gap: 1em"> -->
+<!--     <div> -->
+<!--       <div><code>flex-direction: row;</code></div> -->
+<!--       <div class="wrapper blue" style="flex-direction: row;"> -->
+<!-- 	<div >1</div> -->
+<!-- 	<div >2</div> -->
+<!-- 	<div >3</div> -->
+<!--       </div> -->
+<!--     </div> -->
+
+<!--     <div> -->
+<!--       <div><code>flex-direction: row-reverse;</code></div> -->
+<!--       <div class="wrapper blue" style="flex-direction: row-reverse;"> -->
+<!-- 	<div >1</div> -->
+<!-- 	<div >2</div> -->
+<!-- 	<div >3</div> -->
+<!--       </div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div><code>flex-direction: column;</code></div> -->
+<!--     <div class="wrapper blue" style="flex-direction: column;"> -->
+<!--       <div >1</div> -->
+<!--       <div >2</div> -->
+<!--       <div >3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div><code>flex-direction: column-reverse;</code></div> -->
+<!--     <div class="wrapper blue" style="flex-direction: column-reverse;"> -->
+<!--       <div >1</div> -->
+<!--       <div >2</div> -->
+<!--       <div >3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+<!-- <div class="w" style=""> -->
+<!--   <div> -->
+<!--     <div><code>flex-wrap: no-wrap;</code> (default)</div> -->
+<!--     <div class="wrapper pink" style="width: 420px;"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--       <div>4</div> -->
+<!--       <div>5</div> -->
+<!--       <div>6</div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div><code>flex-wrap: wrap;</code></div> -->
+<!--     <div class="wrapper pink" style="flex-wrap: wrap;width: 420px"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--       <div>4</div> -->
+<!--       <div>5</div> -->
+<!--       <div>6</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+<!-- <div class="w" style="gap: 1.5em 4em"> -->
+<!--   <div> -->
+<!--     <div><code>justify-content: flex-start;</code></div> -->
+<!--     <div class="wrapper purple" style="justify-content: flex-start;width: 420px"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+
+<!--   <div> -->
+<!--     <div><code>justify-content: center;</code></div> -->
+<!--     <div class="wrapper purple" style="justify-content: center;width: 420px"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div><code>justify-content: flex-end;</code></div> -->
+<!--     <div class="wrapper purple" style="justify-content: flex-end;width: 420px"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div><code>justify-content: space-around;</code></div> -->
+<!--     <div class="wrapper purple" style="justify-content: space-around;width: 420px"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+
+<!--   <div> -->
+<!--     <div><code>justify-content: space-between;</code></div> -->
+<!--     <div class="wrapper purple" style="justify-content: space-between;width: 420px"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+
+<!--   <div> -->
+<!--     <div><code>justify-content: space-evenly;</code></div> -->
+<!--     <div class="wrapper purple" style="justify-content: space-evenly;width: 420px;"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+
+<!-- <div class="w" style="gap: 1.5em 4em"> -->
+<!--   <div> -->
+<!--     <div><code>align-items: flex-start;</code></div> -->
+<!--     <div class="wrapper blue" style="align-items: flex-start;height: 150px"> -->
+<!--       <div style="height: 60px">1</div> -->
+<!--       <div>2</div> -->
+<!--       <div style="height: 90px">3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+
+<!--   <div> -->
+<!--     <div><code>align-items: center;</code></div> -->
+<!--     <div class="wrapper blue" style="align-items: center;height: 150px"> -->
+<!--       <div style="height: 60px">1</div> -->
+<!--       <div>2</div> -->
+<!--       <div style="height: 90px">3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div><code>align-items: flex-end;</code></div> -->
+<!--     <div class="wrapper blue" style="align-items: flex-end;height: 150px"> -->
+<!--       <div style="height: 60px">1</div> -->
+<!--       <div>2</div> -->
+<!--       <div style="height: 90px">3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+  
+<!--   <div> -->
+<!--     <div><code>align-items: baseline;</code></div> -->
+<!--     <div class="wrapper blue oi" style="align-items: baseline;height: 150px"> -->
+<!--       <div style="height: 60px;padding-bottom: 22px;">1</div> -->
+<!--       <div style="passing-top: 10px">2</div> -->
+<!--       <div style="height: 90px;padding-top: 36px">3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+
+<!-- <div class="w" style=""> -->
+<!--   <div> -->
+<!--     <div><code>gap: 10px;</code></div> -->
+<!--     <div class="wrapper pink" style="width: 240px;gap: 10px;flex-wrap:wrap"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--       <div>4</div> -->
+<!--       <div>5</div> -->
+<!--       <div>6</div> -->
+<!--     </div> -->
+<!--   </div> -->
+
+<!--   <div> -->
+<!--     <div><code>gap: 30px;</code></div> -->
+<!--     <div class="wrapper pink" style="width: 240px;gap: 30px;flex-wrap:wrap"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--       <div>4</div> -->
+<!--       <div>5</div> -->
+<!--       <div>6</div> -->
+<!--     </div> -->
+<!--   </div> -->
+
+<!--   <div> -->
+<!--     <div><code>gap: 10px 30px;</code></div> -->
+<!--     <div class="wrapper pink" style="width: 240px;gap: 10px 30px;flex-wrap:wrap"> -->
+<!--       <div>1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--       <div>4</div> -->
+<!--       <div>5</div> -->
+<!--       <div>6</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+<!-- <div class="w"> -->
+<!--   <div> -->
+<!--     <div>1 -\-> <code>order: 2;</code></div> -->
+<!--     <div class="wrapper purple"> -->
+<!--       <div style="order: 2;">1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+<!-- <div class="w"> -->
+<!--   <div> -->
+<!--     <div><code>flex: 4 1 50px;</code> <code>flex: 2 1 50px;</code> <code>flex: 0 3 50px;</code></div> -->
+<!--     <div class="wrapper blue" style="width: 420px"> -->
+<!--       <div style="flex: 4 1 50px">1</div> -->
+<!--       <div style="flex: 2 1 50px">2</div> -->
+<!--       <div style="flex: 0 3 50px">3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+<!-- <div class="w"> -->
+<!--     <div> -->
+<!--     <div>1 -\-> <code>align-self: flex-start;</code></div> -->
+<!--     <div class="wrapper pink" style="height: 150px; align-items: center;"> -->
+<!--       <div style="align-self: flex-start;">1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+
+<!--   <div> -->
+<!--     <div>1 -\-> <code>align-self: flex-end;</code></div> -->
+<!--     <div class="wrapper pink" style="align-items: center;height: 150px"> -->
+<!--       <div style="align-self: flex-end;">1</div> -->
+<!--       <div>2</div> -->
+<!--       <div>3</div> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </div> -->
+
+
+<!-- <style> -->
+<!--   body {gap:0} -->
+<!--   .content {width: 90vw;padding: 0.5em} -->
+<!--   .w { gap: 4em; display:flex; flex-flow: row wrap; padding: 1em } -->
+  
+<!--   .wrapper { -->
+<!--       padding: 0.5em; -->
+<!--       border: 2px solid #d9cec1; -->
+<!--       border-radius: 0.25em; -->
+<!--       margin-top: 0.5em; -->
+<!--       max-width: 420px; -->
+<!--       display: flex; -->
+<!--   } -->
+
+<!--   .wrapper > * { -->
+<!--       width: 70px; -->
+<!--       height: 40px; -->
+<!--       border-radius: 0.5em; -->
+<!--       margin: 0.5em; -->
+<!--       display: flex; -->
+<!--       justify-content: center; -->
+<!--       align-items: center; -->
+<!--   } -->
+
+<!--   .oi { -->
+<!--       position: relative; -->
+<!--   } -->
+<!--   .oi::before { -->
+<!--       content: ""; -->
+<!--       width: 100%; -->
+<!--       height: 10px; -->
+<!--       position: absolute; -->
+<!--       top: 82px; -->
+<!--       left: 0; -->
+<!--       border-bottom: 2px dashed var(--bright-pink) -->
+      
+<!--   } -->
+
+<!--   .blue > * { -->
+<!--       background-color: #A2D2FF; -->
+<!--   } -->
+
+<!--   .pink > * { -->
+<!--       background-color: #FFAFCC; -->
+<!--   } -->
+
+<!--   .purple > * { -->
+<!--       background-color: #CDB4DB; -->
+<!--   } -->
+
+
+<!-- </style> -->
