toc anchoring + styles + content

--- a/views/page-template.pug
+++ b/views/page-template.pug
@@ -60,4 +60,6 @@ html
       | !{content}
 
   script
-    include navFolding.js
+    include ../scripts/navFolding.js
+    include ../scripts/toc.js
+
