--- a/public/style.css
+++ b/public/style.css
@@ -96,6 +96,7 @@ th {
 
 td, th { padding: 0.5em 1em; }
 
+tbody tr td:not(:last-child) { border-right: 2px dashed #73596324; }
 tbody tr:not(:last-child) td { border-bottom: 2px solid #73596324; }
 
 tbody tr:last-child td:first-child { border-radius: 0 0 0 0.5em; }
