--- a/views/page-template.pug
+++ b/views/page-template.pug
@@ -36,6 +36,7 @@ html
     // style
     link(rel='stylesheet', type='text/css', href='navBar.css')
     link(rel='stylesheet', type='text/css', href='style.css')
+    link(rel='stylesheet', type='text/css', href='code.css')
     link(rel="preconnect", href="https://fonts.googleapis.com")
     link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap", rel="stylesheet")
