--- a/views/page-template.pug
+++ b/views/page-template.pug
@@ -1,24 +1,4 @@
-mixin navLink(name, endpoint, specialClass)
-  li(class=(name === title ? specialClass + " active" : specialClass))
-    a(href=endpoint)= name
-
-mixin navFolder(name, links)
-    ul.folder
-      li.folderTitle
-        span(class="material-symbols-outlined ")= 'chevron_right'
-        span= name
-      each page in links
-        +navLink(page.title, page.endpoint, 'folded')
-
-mixin navbar(dirs, links)
-  div.navContainer
-    div(id='navBar')
-      h3.title Index
-      each files, folder in dirs
-        +navFolder(folder, files)
-      ul.lonelyLink
-        each page in links
-          +navLink(page.title, page.endpoint, '')
+include ./navBar.pug
 
 doctype html
 html
@@ -32,22 +12,7 @@ html
       hljs.highlightAll();
 
     // style
-    link(rel='stylesheet', type='text/css', href='navBar.css')
-    link(rel='stylesheet', type='text/css', href='style.css')
-    link(rel='stylesheet', type='text/css', href='code.css')
-    link(rel="preconnect", href="https://fonts.googleapis.com")
-    link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
-    link(href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap", rel="stylesheet")
-    link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0")
-
-    // favicon
-    link(rel='icon', type='image/x-icon' href='favicon/favicon.ico')
-    link(rel='apple-touch-icon', sizes='180x180', href='favicon/apple-touch-icon.png')
-    link(rel='icon', type='image/png', sizes='32x32', href='favicon/favicon-32x32.png')
-    link(rel='icon', type='image/png', sizes='16x16', href='favicon/favicon-16x16.png')
-    link(rel='manifest', href='favicon/site.webmanifest')
+    include ./styles.pug
 
     // no indexing
     meta(name="robots", content="noindex")
@@ -59,6 +24,6 @@ html
       | !{content}
 
   script
-    include ../scripts/navFolding.js
-    include ../scripts/toc.js
+    include ./scripts/navFolding.js
+    include ./scripts/toc.js
 
