--- a/views/page-template.pug
+++ b/views/page-template.pug
@@ -17,7 +17,7 @@ html
     // no indexing
     meta(name="robots", content="noindex")
 
-  body
+  body.dark
     +navbar(navDirs, navLinks)
 
     div.content
