--- a/views/styles.pug
+++ b/views/styles.pug
@@ -2,6 +2,7 @@
 link(rel="stylesheet", type="text/css", href="navBar.css")
 link(rel="stylesheet", type="text/css", href="style.css")
 link(rel="stylesheet", type="text/css", href="code.css")
+link(rel="stylesheet", type="text/css", href="dark-theme.css")
 
 // Fonts
 link(rel="preconnect", href="https://fonts.googleapis.com")
