--- a/views/index.html
+++ b/views/index.html
@@ -42,119 +42,119 @@
 <!-- </div> -->
 
 <!-- <style> -->
-/*   body {gap:0} */
-/*   .content { width: 100vw;} */
-/*   .w { gap: 0.5em 4em; display:flex; flex-flow: row wrap; padding: 1em; */
+<!-- /*   body {gap:0} */ -->
+<!-- /*   .content { width: 100vw;} */ -->
+<!-- /*   .w { gap: 0.5em 4em; display:flex; flex-flow: row wrap; padding: 1em; */ -->
      
-/*       border: 2px solid #d9cec1; */
-/*       border-radius: 0.25em; */
-/*      } */
+<!-- /*       border: 2px solid #d9cec1; */ -->
+<!-- /*       border-radius: 0.25em; */ -->
+<!-- /*      } */ -->
   
-  /* .gridwrapper, .grid { */
-  /*     display: grid; */
-  /*     grid-template-columns: repeat(3, 1fr); */
+<!--   /* .gridwrapper, .grid { */ -->
+<!--   /*     display: grid; */ -->
+<!--   /*     grid-template-columns: repeat(3, 1fr); */ -->
 
-  /*     /\* justify-items: center; *\/ */
-  /*     /\* align-items: center; *\/ */
-  /*     textr-align: center; */
+<!--   /*     /\* justify-items: center; *\/ */ -->
+<!--   /*     /\* align-items: center; *\/ */ -->
+<!--   /*     textr-align: center; */ -->
 
-  /*     width: fit-content; */
-  /*     border: 2px solid #d9cec1; */
-  /*     border-radius: 0.25em; */
-  /*     margin-top: 0.5em; */
-  /* } */
+<!--   /*     width: fit-content; */ -->
+<!--   /*     border: 2px solid #d9cec1; */ -->
+<!--   /*     border-radius: 0.25em; */ -->
+<!--   /*     margin-top: 0.5em; */ -->
+<!--   /* } */ -->
 
-  /* .gridwrapper > * { */
-  /*      width: 120px; */
-  /*      height: 80px; */
-  /*      border: 1px dashed #d9cec1; */
-  /*      display: flex; */
-  /*      justify-content: center; */
-  /*      align-items: center; */
-  /* } */
+<!--   /* .gridwrapper > * { */ -->
+<!--   /*      width: 120px; */ -->
+<!--   /*      height: 80px; */ -->
+<!--   /*      border: 1px dashed #d9cec1; */ -->
+<!--   /*      display: flex; */ -->
+<!--   /*      justify-content: center; */ -->
+<!--   /*      align-items: center; */ -->
+<!--   /* } */ -->
 
-  /* .gridwrapper > div:nth-child(1), */
-  /* .gridwrapper > div:nth-child(2), */
-  /* .gridwrapper > div:nth-child(3) { */
-  /*     border-bottom: 1px solid #BE9FD1; */
-  /* } */
-  /*  .gridwrapper > div:nth-child(4), */
-  /* .gridwrapper > div:nth-child(6), */
-  /* .gridwrapper > div:nth-child(5) { */
-  /*     border-top: 1px solid #BE9FD1; */
-  /* } */
-  /* .gridwrapper > div:nth-child(2), */
-  /* .gridwrapper > div:nth-child(5), */
-  /* .gridwrapper > div:nth-child(8) { */
-  /*     border-right: 1px solid #BE9FD1; */
-  /* } */
-  /*  .gridwrapper > div:nth-child(3), */
-  /* .gridwrapper > div:nth-child(6), */
-  /* .gridwrapper > div:nth-child(9) { */
-  /*     border-left: 1px solid #BE9FD1; */
-  /* } */
-  /* .gridwrapper > div:nth-child(1), */
-  /* .gridwrapper > div:nth-child(2), */
-  /* .gridwrapper > div:nth-child(5), */
-  /* .gridwrapper > div:nth-child(4) { */
-  /*     background-color: #BDE0FE66; */
-  /* } */
+<!--   /* .gridwrapper > div:nth-child(1), */ -->
+<!--   /* .gridwrapper > div:nth-child(2), */ -->
+<!--   /* .gridwrapper > div:nth-child(3) { */ -->
+<!--   /*     border-bottom: 1px solid #BE9FD1; */ -->
+<!--   /* } */ -->
+<!--   /*  .gridwrapper > div:nth-child(4), */ -->
+<!--   /* .gridwrapper > div:nth-child(6), */ -->
+<!--   /* .gridwrapper > div:nth-child(5) { */ -->
+<!--   /*     border-top: 1px solid #BE9FD1; */ -->
+<!--   /* } */ -->
+<!--   /* .gridwrapper > div:nth-child(2), */ -->
+<!--   /* .gridwrapper > div:nth-child(5), */ -->
+<!--   /* .gridwrapper > div:nth-child(8) { */ -->
+<!--   /*     border-right: 1px solid #BE9FD1; */ -->
+<!--   /* } */ -->
+<!--   /*  .gridwrapper > div:nth-child(3), */ -->
+<!--   /* .gridwrapper > div:nth-child(6), */ -->
+<!--   /* .gridwrapper > div:nth-child(9) { */ -->
+<!--   /*     border-left: 1px solid #BE9FD1; */ -->
+<!--   /* } */ -->
+<!--   /* .gridwrapper > div:nth-child(1), */ -->
+<!--   /* .gridwrapper > div:nth-child(2), */ -->
+<!--   /* .gridwrapper > div:nth-child(5), */ -->
+<!--   /* .gridwrapper > div:nth-child(4) { */ -->
+<!--   /*     background-color: #BDE0FE66; */ -->
+<!--   /* } */ -->
   
-  /* .gridwrapper > div:nth-child(7), */
-  /* .gridwrapper > div:nth-child(8), */
-  /* .gridwrapper > div:nth-child(9) */
-  /* { */
-  /*     background-color: #FFC8DD38; */
-  /* } */
+<!--   /* .gridwrapper > div:nth-child(7), */ -->
+<!--   /* .gridwrapper > div:nth-child(8), */ -->
+<!--   /* .gridwrapper > div:nth-child(9) */ -->
+<!--   /* { */ -->
+<!--   /*     background-color: #FFC8DD38; */ -->
+<!--   /* } */ -->
   
   
-  /* .wrapper { */
-  /*     padding: 0.5em; */
-  /*     border: 2px solid #d9cec1; */
-  /*     border-radius: 0.25em; */
-  /*     margin-top: 0.5em; */
-  /*     max-width: 420px; */
-  /*     display: flex; */
-  /* } */
+<!--   /* .wrapper { */ -->
+<!--   /*     padding: 0.5em; */ -->
+<!--   /*     border: 2px solid #d9cec1; */ -->
+<!--   /*     border-radius: 0.25em; */ -->
+<!--   /*     margin-top: 0.5em; */ -->
+<!--   /*     max-width: 420px; */ -->
+<!--   /*     display: flex; */ -->
+<!--   /* } */ -->
 
-  /* .wrapper  > * { */
-  /*     width: 70px; */
-  /*     height: 40px; */
-  /*     border-radius: 0.5em; */
-  /*     margin: 0.5em; */
-  /*     display: flex; */
-  /*     justify-content: center; */
-  /*     align-items: center; */
-  /* } */
+<!--   /* .wrapper  > * { */ -->
+<!--   /*     width: 70px; */ -->
+<!--   /*     height: 40px; */ -->
+<!--   /*     border-radius: 0.5em; */ -->
+<!--   /*     margin: 0.5em; */ -->
+<!--   /*     display: flex; */ -->
+<!--   /*     justify-content: center; */ -->
+<!--   /*     align-items: center; */ -->
+<!--   /* } */ -->
 
 
-  /* .blue > * { */
-  /*     background-color: #A2D2FF; */
-  /* } */
+<!--   /* .blue > * { */ -->
+<!--   /*     background-color: #A2D2FF; */ -->
+<!--   /* } */ -->
 
-  /* .pink > * { */
-  /*     background-color: #FFAFCC; */
-  /* } */
+<!--   /* .pink > * { */ -->
+<!--   /*     background-color: #FFAFCC; */ -->
+<!--   /* } */ -->
 
-  /* .purple > * { */
-  /*     background-color: #CDB4DB; */
-  /* } */
+<!--   /* .purple > * { */ -->
+<!--   /*     background-color: #CDB4DB; */ -->
+<!--   /* } */ -->
 
-  /* .grid > * { */
-  /*     padding: 1em; */
-  /*     border: 1px dashed #d9cec1; */
-  /*     display: flex; */
-  /*     justify-content: center; */
-  /*     align-items: center; */
-  /* } */
+<!--   /* .grid > * { */ -->
+<!--   /*     padding: 1em; */ -->
+<!--   /*     border: 1px dashed #d9cec1; */ -->
+<!--   /*     display: flex; */ -->
+<!--   /*     justify-content: center; */ -->
+<!--   /*     align-items: center; */ -->
+<!--   /* } */ -->
 
-  /* .lol { */
-  /* width: 420px; */
-  /* display: grid; */
-  /* grid-template-columns: repeat(auto-fit, minmax(90px, 1fr)); */
-  /* grid-auto-rows: minmax(100px, auto); */
-  /* gap: 20px; */
-  /* } */
+<!--   /* .lol { */ -->
+<!--   /* width: 420px; */ -->
+<!--   /* display: grid; */ -->
+<!--   /* grid-template-columns: repeat(auto-fit, minmax(90px, 1fr)); */ -->
+<!--   /* grid-auto-rows: minmax(100px, auto); */ -->
+<!--   /* gap: 20px; */ -->
+<!--   /* } */ -->
 <!-- </style> -->
 
 
