--- a/views/styles.pug
+++ b/views/styles.pug
@@ -12,6 +12,9 @@ link(href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap", rel
 link(href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap", rel="stylesheet")
 link(rel="stylesheet", href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0")
 
+// Icons
+link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
+
 // favicon
 link(rel="icon", type="image/x-icon" href="favicon/favicon.ico")
 link(rel="apple-touch-icon", sizes="180x180", href="favicon/apple-touch-icon.png")
